Test: Add subtitle for branch deployment testing

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1>{{ heading }}</h1>
+        <p class="subtitle">🚀 Testing Render Branch Deployment</p>
         
         {% if success_message %}
         <div class="success-message">
